# patchelf-wrapper

./: .gitignore  AUTHORS  Changelog.md  DEPENDENCIES.txt  Makefile.am  NEWS  README.md  README.org  configure.ac  guix.scm  setup-symlinks.sh
cdr255/: patchelf-wrapper.scm
doc/: patchelf-wrapper.texi
tests/: maintests.scm
